# ClusterProg

./: .gitignore  .travis.yml  CMakeList.txt.in  CMakeLists.txt  README.md  main.cpp  tests_file.py
app/: CMakeLists.txt
app/clustering/: CMakeLists.txt
app/clustering/include/: Analizer.h  AnalizerImpl.h  Cluster.hpp  DirHandler.h  FileInfo.h  FileInfoImpl.h  FileManager.h  FileReader.h  FileReaderImpl.h  Group.h  GroupImpl.h  KMeans.hpp  LevenshteinDistance.hpp  SimilarFilesGroup.h  SimilarFilesGroupImpl.h  TFIDF.h  TFIDFPP.h  UniversalCompEqual.hpp  VectorSpace.hpp  VectorSpacePP.hpp
app/clustering/src/: Analizer.cpp  AnalizerImpl.cpp  DirHandler.cpp  FileInfo.cpp  FileInfoImpl.cpp  FileManager.cpp  FileReader.cpp  FileReaderImpl.cpp  Group.cpp  GroupImpl.cpp  SimilarFilesGroup.cpp  SimilarFilesGroupImpl.cpp  TFIDF.cpp  TFIDFPP.cpp  main.cpp
app/clustering/test/: CMakeLists.txt  test_FileInfo.cpp  test_FileManager.cpp  test_FileReader.cpp  test_LevenshteinDistance.cpp
app/clustering/utils/: linter.sh
app/includes/: mainwindow.h  run.h  settings.h  settingsdialog.h  settingspresenter.h
app/src/: mainwindow.cpp  mainwindow.ui  run.cpp  settings.cpp  settingsdialog.cpp  settingsdialog.ui  settingspresenter.cpp
include/: Analizer.h  Cluster.h  Cluster.hpp  DirHandler.h  FileInfo.h  FileInfoImpl.h  FileManager.h  FileMover.h  FileReader.h  FileReaderImpl.h  GraphicInterface.h  Group.h  KMeans.h  KMeans.hpp  Mover.h  Settings.h  TFIDF.h  UniversalCalcDelta.h  UniversalCalcDelta.hpp  UniversalCompEqual.h  UniversalMakeCentroid.h  UniversalMakeCentroid.hpp  VectorSpace.h  VectorSpace.hpp  fileinfo.h  k-means.h  tf-idf.h
interface/: CMakeLists.txt  settings.h  settingsdialog.cpp  settingsdialog.ui
interface/includes/: mainwindow.h  run.h  settings.h  settingsdialog.h
interface/src/: mainwindow.cpp  run.cpp  settings.cpp  settingsdialog.cpp
mytest/input/: a0.ru.en.txt  a1.ru.en.txt  a2.ru.en.txt  d0.txt  d1.txt  d2.txt  d4.txt  d5.txt  o0.ru.en.txt  o0.txt  o1.ru.en.txt  o1.txt  o10.ru.en.txt  o10.txt  o11.ru.en.txt  o11.txt  o12.ru.en.txt  o12.txt  o13.txt  o14.ru.en.txt  o14.txt  o2.ru.en.txt  o2.txt  o3.ru.en.txt  o3.txt  o4.ru.en.txt  o4.txt  o5.ru.en.txt  o5.txt  o6.ru.en.txt  o6.txt  o7.ru.en.txt  o7.txt  o8.ru.en.txt  o8.txt  o9.ru.en.txt  o9.txt
src/: Analizer.cpp  AnalizerImpl.cpp  Cluster.cpp  DirHandler.cpp  FileInfo.cpp  FileInfoImpl.cpp  FileManager.cpp  FileMover.cpp  FileReader.cpp  FileReaderImpl.cpp  GroupImpl.cpp  KMeans.cpp  TFIDF.cpp  UniversalCalcDelta.cpp  UniversalCompEqual.cpp  UniversalMakeCentroid.cpp  VectorSpace.cpp  k-means.cpp  main.cpp  tf-idf.cpp
test/: CMakeLists.txt  test_FileReader.cpp
utils/: linter.sh
